--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,11 +12,31 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->        
+    <![endif]-->  
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.css rel="stylesheet>
+    <link href="css/hci-friends.css" rel="stylesheet">
 </head>
 
 <body>
+	<div class="container">
 	<h1>My HCI Friends</h1>
+	<!-- <div>
+		<img src="http://lorempixel.com/500/500/people">
+		<h3>Fake friend</h3>
+			<p>All my friends are imaginary.</p>
+	</div> -->
+
+	{{#each friends}}
+	<div class="friends" id="{{id}}">
+      <a href="friends" class="thumbnail">
+        <img src="{{imageURL}}" class="img-rounded">
+        <h3><a href="#">{{name}}</a></h3>
+        <p>{{description}}</p>
+      </a>
+      <hr>
+    </div>
+	{{/each}}
 
 	<form id="addFriendForm" role="form" method="get" action="/add">
 		<h3>Add a friend</h3>
@@ -30,5 +50,9 @@
 	    </div>
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 	</form>
+	</div>
+	<script src="js/jquery-1.11.0.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<script src="js/hci-friends.js"></script>
 </body>
 </html>
